--- a/Sale_Analyser.ipynb
+++ b/Sale_Analyser.ipynb
@@ -1746,7 +1746,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Ques3. What time should the store display advertisemens to maximize the likelihood of customer’s buying product?"
+        "### Ques3. What time should the store display advertisements to maximize the likelihood of customer’s buying product?"
       ],
       "metadata": {
         "id": "tYgLWPiC4rQn"
